# cat

./: .gitignore  CMakeLists.txt  Makefile  README.md  file-ops.c  file-ops.h  info-opts.c  info-opts.h  input.c  input.h  main.c  my-cat.c  opt-array.c  opt-array.h  options.c  options.h  opts.h  parsers.c  parsers.h  str-array.c  str-array.h
